--- a/cli/Makefile
+++ b/cli/Makefile
@@ -1,5 +1,11 @@
-CC= g++
-CPPFLAGS= -std=c++11 -fopenmp -lm -Ofast
+# Original:
+# CC = g++
+# CPPFLAGS= -std=c++11 -fopenmp -lm -Ofast
+
+# Changed for mac (g++ = gcc -xc++ -lstdc++ -shared-libgcc)
+CC = gcc-9
+CPPFLAGS= -xc++ -lstdc++ -shared-libgcc -std=c++11 -fopenmp -lm -Ofast
+
 OBJS= deepwalk line walklets hpe app mf bpr hoprec warp nemf nerank
 LIBS= -L ../bin -lproNet
 
