--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,11 @@
-CC = g++
-CPPFLAGS = -std=c++11 -fPIC -fopenmp -lm -Ofast
+# Original:
+# CC = g++
+# CPPFLAGS= -std=c++11 -fopenmp -lm -Ofast
+
+# Changed for mac (g++ = gcc -xc++ -lstdc++ -shared-libgcc)
+CC = gcc-9
+CPPFLAGS= -xc++ -lstdc++ -shared-libgcc -std=c++11 -fopenmp -lm -Ofast
+
 OBJECTS = util.o random.o proNet.o ./model/DeepWalk.o ./model/Walklets.o ./model/LINE.o ./model/HPE.o ./model/APP.o ./model/MF.o ./model/BPR.o ./model/HBPR.o ./model/NEMF.o ./model/WARP.o ./model/NERANK.o ./model/ECO.o ./model/GCN.o ./model/TEXTGCN.o ./model/TEXTGCNdev.o
 all: $(OBJECTS)
 	mkdir -p ../bin
