--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Binaries in a wrong place
+mf
+libsmore.a
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -117,3 +122,6 @@ pyRecGraph.cpp
 
 # MAC .DS_Store file 
 .DS_Store
+
+# VS Code
+.vscode
